<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_explore"
        android:orderInCategory="100"
        android:title="Explore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_market"
        android:orderInCategory="100"
        android:title="Market"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_friend"
        android:orderInCategory="100"
        android:title="Friend"
        app:showAsAction="never" />
</menu>

