...
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:background="@color/qmui_config_color_white">

        <com.qmuiteam.qmui.widget.QMUITabSegment
            android:id="@+id/tabSegment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/tab_panel_bg"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/contentViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fitsSystemWindows="true"/>
    </LinearLayout>

...
