<resources>
    <string name="app_name">CoinZ</string>
    <string name="entry">Start!</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
...
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_login_username">Enter you email.</string>
    <string name="hint_login_password">Enter your password.</string>
    <string name="login">Login</string>
    <string name="login_forget_pwd">Forget the password</string>
    <string name="please_input_limit_pwd">Please enter numbers or characters</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="register">Register</string>
    <string name="User">User</string>
...
